# maybe-http-client

./: Cargo.toml
src/: client.rs  error.rs  lib.rs
tests/: test_client.rs
