[package]
name = "maybe-http-client"
version = "1.0.0"
edition = "2021"

[dependencies]
thiserror = "1.0.61"
maybe-async = "0.2.10"
reqwest = { version = "0.12.4", features = ["json"]}
#reqwest = { version = "0.12.4", features = ["json"], default-features = false}

log = {version = "0.4.21", optional = true}
serde_json = {version = "1.0.117", default-features = false}

[dev-dependencies]
async-std = { version = "1.12.0", features = ["async-attributes", "attributes", "tokio1"] }

[features]

default = ["async"]
async = ["__async"]
sync = ["__sync", "reqwest/blocking"]
log = ["dep:log"]

__async = ["maybe-async/default"]
__sync = ["maybe-async/is_sync"]
